--- a/Rafael_Dottori_DR3_TP3_notebook.ipynb
+++ b/Rafael_Dottori_DR3_TP3_notebook.ipynb
@@ -18,6 +18,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Link para o GitHub\n",
+    "\n",
+    "https://github.com/R-Dottori/dev-apps-TP3\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "*Neste TP3, você deve demonstrar sua capacidade de integrar ferramentas, agentes e raciocínio interativo para resolver problemas complexos utilizando Large Language Models (LLMs).*\n",
     "\n",
     "*O desafio envolve criar uma aplicação funcional que combine os conceitos de ReAct Agents, memória conversacional e ferramentas externas (tools), com criatividade e originalidade.*\n",
